Mon Oct 12 17:30:11 CEST 2009 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug on large ints in the byte-code for 64-bits machine
	* fix a bug with call/2-N
	* change listing/0-1 printing stream: now it is current_output
	* add a new stream alias: user_error associated to stderr

Fri Oct  9 14:40:11 CEST 2009 <Daniel.Diaz@univ-paris1.fr>

	* add evaluable functors: (a)sinh/1, (a)cosh/1, (a)tanh/1
	* add evaluable functors: epsilon/0, lsb/1, msb/1, popcount/1

Thu Oct  8 17:26:36 CEST 2009 <Daniel.Diaz@univ-paris1.fr>

	* fix compilation problem under Mac OS X Snow Leopard (force 32-bits mode)

Wed Oct  7 16:14:16 CEST 2009 <Daniel.Diaz@univ-paris1.fr>

	* add evaluable functiors: log/2, gcd/2, tan/1, atan/2, pi/0, e/0
	* add built-in ground/1
	* rename built-in sort0 as msort 
	* add new error detection for keysort

Tue Oct  6 12:47:32 CEST 2009 <Daniel.Diaz@univ-paris1.fr>

	* accept (but ignore) directive encoding/1
	* add >< operator (bitwise XOR) ^/2 becomes integer exponentiation
	* improve randomize/0 (more different values on consecutive calls)
	* relax the lexer to also accept 0'' (ISO requieres 0''' or 0'\')

Tue Mar 10 17:14:36 CET 2009 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug with top-level options --entry-goal and --query-goal

Fri Feb  6 11:02:57 CET 2009 <Daniel.Diaz@univ-paris1.fr>

	* add working sigaction detection to detect fault addr (e.g. Mac OS X)

Fri Jan 23 12:16:18 CET 2009 <Daniel.Diaz@univ-paris1.fr>

	* add gplc option --no-mult-warn
	* add prolog flags suspicious_warning, multifile_warning

Mon Nov  3 14:54:25 CEST 2008 <Daniel.Diaz@univ-paris1.fr>

	* detect integer underflow/overflow in the parser
	* fix a memory leak in catch/3

Mon Oct 20 16:53:37 CEST 2008 <Daniel.Diaz@univ-paris1.fr>

	* increase limits (MAX_VAR_NAME_LENGTH=1024 and MAX_VAR_IN_TERM=10240)
	* add PL_INT_LOWEST_VALUE and PL_INT_GREATEST_VALUE to gprolog.h

Fri Oct 17 12:09:37 CEST 2008 <Daniel.Diaz@univ-paris1.fr>
