@@ -55,6 +55,19 @@ enum
   FLAG_PROLOG_VERSION,
   FLAG_PROLOG_DATE,
   FLAG_PROLOG_COPYRIGHT,
+  FLAG_DIALECT,
+  FLAG_HOME,
+  FLAG_HOST_OS,
+  FLAG_HOST_VENDOR,
+  FLAG_HOST_CPU,
+  FLAG_HOST,
+  FLAG_ARCH,
+
+  FLAG_VERSION_DATA,
+  FLAG_VERSION,
+  FLAG_UNIX,
+
+  FLAG_ARGV,
 
   NB_OF_FLAGS			/* this gives us the number of used flags */
 };
