@@ -15,12 +15,12 @@ AC_CONFIG_SRCDIR(SETVARS)
 # ***************************
 
 PROLOG_NAME='GNU Prolog'
-PROLOG_NAME1='gprolog'
+PROLOG_DIALECT='gprolog'
 PROLOG_VERSION='1.3.2'
 PROLOG_DATE='Mar 10 2009'
 PROLOG_COPYRIGHT='Copyright (C) 1999-2009 Daniel Diaz'
 
-TOP_LEVEL=$PROLOG_NAME1
+TOP_LEVEL=$PROLOG_DIALECT
 GPLC=gplc
 HEXGPLC=hexgplc
 ENV_VARIABLE=PL_PATH
@@ -42,7 +42,7 @@ LIB_BIPS_FD=libbips_fd
 # * variable names *
 # ******************
 
-AC_SUBST(PROLOG_NAME1)
+AC_SUBST(PROLOG_DIALECT)
 AC_SUBST(PROLOG_NAME)
 AC_SUBST(PROLOG_VERSION)
 AC_SUBST(PROLOG_DATE)
@@ -534,7 +534,7 @@ LDGUILIBS=`make_lib_list $GUILIB`
 # ***********************
 
 AC_DEFINE_UNQUOTED(PROLOG_NAME,      "$PROLOG_NAME")
-AC_DEFINE_UNQUOTED(PROLOG_NAME1,     "$PROLOG_NAME1")
+AC_DEFINE_UNQUOTED(PROLOG_DIALECT,     "$PROLOG_DIALECT")
 AC_DEFINE_UNQUOTED(PROLOG_VERSION,   "$PROLOG_VERSION")
 AC_DEFINE_UNQUOTED(PROLOG_DATE,      "$PROLOG_DATE")
 AC_DEFINE_UNQUOTED(PROLOG_COPYRIGHT, "$PROLOG_COPYRIGHT")
@@ -596,7 +596,7 @@ fi
 test "$prefix"      = NONE && prefix=/usr/local
 test "$exec_prefix" = NONE && exec_prefix=$prefix
 
-PKG_NAME=$PROLOG_NAME1-$PROLOG_VERSION
+PKG_NAME=$PROLOG_DIALECT-$PROLOG_VERSION
 
 # *-------------*
 # * INSTALL_DIR *
@@ -703,7 +703,7 @@ BIN_FILES=
 OBJ_FILES=
 LIB_FILES=
 
-INC_FILES="$PROLOG_NAME1.h fd_to_c.h"
+INC_FILES="$PROLOG_DIALECT.h fd_to_c.h"
 DOC_FILES='???*.dvi ???*.ps ???*.pdf ???*.chm ???*.eps ???*.html ???*.gif'
 HTML_FILES='???*.html ???*.gif ???*.css'
 EXPL_FILES='Makefile README PROGS ??*.pl'
