@@ -1,3 +1,12 @@
+Wed Oct 21 12:02:15 CEST 2009 <Daniel.Diaz@univ-paris1.fr>
+
+	* add Prolog flags: dialect, home, host_os, host_vendor, host_cpu,
+	  host, arch, version, version_data, unix, argv
+
+Tue Oct 20 13:15:44 CEST 2009 <Daniel.Diaz@univ-paris1.fr>
+
+	* add preprocessor directives if/1 else/0 elif/1 endif/0
+
 Mon Oct 12 17:30:11 CEST 2009 <Daniel.Diaz@univ-paris1.fr>
 
 	* fix a bug on large ints in the byte-code for 64-bits machine
